src/styles/custom.scss
$background: rgb(17, 23, 37);

body {
  background-color: $background;
}

.badge {
  font-size: 14px;
  margin: 2px 0px;
}

.badge {
  background-color: #1058c0 !important;

  path,
  a {
    color: white !important;
    fill: white !important;
  }
}

object {
  pointer-events: none;
  display: block;
}

#home-map {
  /* position: absolute; */
  /* top: 58px;
  bottom: 0; */
  // max-width: 800px;

  height: 300px;
  border-radius: 10px;
}

#home-wrapper {
  padding: 0 10px;
  height: 500px;
  display: flex;
  flex-direction: column;

  width: 100%;

  align-items: center;
  justify-content: center;
  gap: 30px;
}

hr {
  height: 1px !important;
  background-color: rgb(57, 64, 99) !important;
  border: none !important;
  opacity: 1;
}

main a {
  word-break: normal;
}

.bg-fullscreen {
  background: $background;
}
.bg-navbar {
  background: $background;
  // border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}
.bg-title {
  background-color: $background;
  // background-image: url("/img/title-map.png");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  // height: 250px;
}
.home-banner {
  // position: absolute;
  // width: 100%;

  display: flex;
  justify-content: center;
  // top: 50%;
  z-index: $zindex-sticky;
  pointer-events: none;
  // transform: translateY(-50%);

  > div {
    text-align: center;
    pointer-events: all;
    // background-color: rgba(255, 255, 255, 0.9);
  }

  a span {
    align-items: center;
  }
}
.title-image {
  @include media-breakpoint-down(md) {
    width: 100%;
  }
}

.gold-list {
  img,
  div {
    width: 220px;
    max-width: 100%;
  }

  div {
    padding: 20px;
  }
}
.silver-list {
  img,
  div {
    width: 150px;
    max-width: 100%;
  }

  div {
    padding: 10px;
  }
}

.gold-list,
.silver-list {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;

  div {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    border-radius: 10px;
    aspect-ratio: 2;
  }

  img {
    height: auto;
    max-height: 100%;
  }
}

.table-dark {
  --bs-table-bg: transparent;
  --bs-table-hover-bg: rgba(255, 255, 255, 0.05);
  border-color: rgb(57, 64, 99);

  th {
    color: $secondary;
    border-bottom-color: rgb(57, 64, 99);
  }

  td {
    border-color: rgb(57, 64, 99);
  }
}

.person {
  max-width: 175px;
}

ul.projects {
  list-style: none;
  li::before {
    content: "\2022";
    color: $secondary;
    font-weight: bold;
    display: inline-block;
    width: 1em;
    margin-left: -2em;
  }
}

.heading-link,
.heading-link:hover {
  color: var(--bs-body-color);
  border-bottom: none;
}

.heading-link:hover {
  &::after {
    font-size: 1rem;
    content: "🔗";
    padding-left: 10px;
  }
}

ul.section-list {
  list-style: none;
  padding: 0;
  .card {
    background-color: transparent;
    color: var(--bs-body-color);
    border: 1px solid rgba(0, 0, 0, 0);
  }
  .card:hover {
    background-color: rgba(0, 0, 0, 0.1);
    color: white;
    border: 1px solid rgba(0, 0, 0, 0.125);
  }

  li {
    margin: 10px 0;
  }
}

.post-meta-date {
  color: rgb(177, 177, 230);
}

.inline-icon {
  width: 1em;
  display: inline;
  vertical-align: bottom;
  path {
    fill: $secondary;
  }
}

figure {
  display: flex;
  flex-direction: column;
  align-items: center;
  counter-increment: figureIndex;

  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0;
  margin-inline-end: 0;

  figcaption::before {
    content: "Figure " counter(figureIndex) ": ";
  }
  figcaption {
    max-width: 90%;
    margin-top: 20px;

    p:first-child {
      display: inline;
    }
  }
}

.landing-platform-icon {
  svg {
    vertical-align: text-bottom;
    width: 20px;
    height: 20px;
    fill: white;
  }
}

blockquote {
  padding-left: 30px;
  border-left: 2px solid;
  font-style: italic;
}

